# hiraeth

./: .gitignore  CMakeLists.txt
include/: game.hpp  texture.hpp
include/engine/: camera.hpp  scene.hpp  sprite_renderer.hpp  window.hpp
include/gl/: shader_program.hpp  texture.hpp
res/scenes/: demo.scene
res/shaders/: fragment.glsl  vertex.glsl
src/: game.cpp  main.cpp  texture.cpp
src/engine/: camera.cpp  scene.cpp  sprite_renderer.cpp  window.cpp
src/gl/: shader_program.cpp  texture.cpp
